ecmascript/parser/tests/test262-error-references/fail/b7b057684207633b.js.stderr
error: Legacy octal escape is not permitted in strict mode
 --> $DIR/tests/test262-parser/fail/b7b057684207633b.js:1:2
  |
1 | `\1`;
  |  ^^

